jenkins/service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: devops
  name: jenkins
spec:

  selector:
    name: jenkins
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
    - name: agent
      port: 50000
      protocol: TCP
